# hangman

./: LICENSE  README.md  pyproject.toml
src/hangman/: commands.py  config.py  config.toml  exceptions.py  game_handler.py  launcher.py  renderer.py  validator.py
src/hangman/configs/: config.toml
src/hangman/configs/data/en/: medium.txt
src/hangman/configs/data/ru/: hard.txt  medium.txt
src/hangman/configs/locales/: en.toml
src/hangman/data/en/: easy.txt  hard.txt
src/hangman/data/ru/: easy.txt
src/hangman/domain/: game_handler.py  validator.py  word_hander.py
src/hangman/locales/: en.toml  ru.toml
src/hangman/presentation/: gallows.py  renderer.py
