[project]
name = "hangman"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "maff1337", email = "yakdm@duck.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
hangman = "hangman.launcher:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"
